--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "homepage": "https://github.com/Scott-Donaldson/kv6003-project#readme",
   "dependencies": {
     "@tensorflow-models/toxicity": "^1.2.2",
-    "@tensorflow/tfjs": "^3.9.0",
+    "@tensorflow/tfjs": "^3.10.0",
+    "@tensorflow/tfjs-node": "^3.10.0",
     "bufferutil": "^4.0.4",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.13",
     "utf-8-validate": "^5.0.6"
   },
-  "type" : "module"
+  "type": "module"
 }
