--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tensorflow-models/toxicity": "^1.2.2",
     "@tensorflow/tfjs": "^3.10.0",
     "@tensorflow/tfjs-node": "^3.10.0",
+    "better-sqlite3": "^7.4.5",
     "bufferutil": "^4.0.4",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
