--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bufferutil": "^4.0.4",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
+    "figlet": "^1.5.2",
     "nodemon": "^2.0.13",
     "utf-8-validate": "^5.0.6"
   },
